--- a/angular.json
+++ b/angular.json
@@ -3,6 +3,8 @@
   "version": 2,
   "projects": {
     "admin": "apps/frontend/admin",
-    "admin-e2e": "apps/frontend/admin-e2e"
+    "admin-e2e": "apps/frontend/admin-e2e",
+    "frontend-site": "apps/frontend/site",
+    "frontend-site-e2e": "apps/frontend/site-e2e"
   }
 }
