--- a/apps/frontend/site/project.json
+++ b/apps/frontend/site/project.json
@@ -1,23 +1,23 @@
 {
   "projectType": "application",
-  "sourceRoot": "apps/frontend/admin/src",
+  "sourceRoot": "apps/frontend/site/src",
   "prefix": "rwa",
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/apps/frontend/admin",
-        "index": "apps/frontend/admin/src/index.html",
-        "main": "apps/frontend/admin/src/main.ts",
-        "polyfills": "apps/frontend/admin/src/polyfills.ts",
-        "tsConfig": "apps/frontend/admin/tsconfig.app.json",
+        "outputPath": "dist/apps/frontend/site",
+        "index": "apps/frontend/site/src/index.html",
+        "main": "apps/frontend/site/src/main.ts",
+        "polyfills": "apps/frontend/site/src/polyfills.ts",
+        "tsConfig": "apps/frontend/site/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
-          "apps/frontend/admin/src/favicon.ico",
-          "apps/frontend/admin/src/assets"
+          "apps/frontend/site/src/favicon.ico",
+          "apps/frontend/site/src/assets"
         ],
-        "styles": ["apps/frontend/admin/src/styles.scss"],
+        "styles": ["apps/frontend/site/src/styles.scss"],
         "scripts": []
       },
       "configurations": {
@@ -36,8 +36,8 @@
           ],
           "fileReplacements": [
             {
-              "replace": "apps/frontend/admin/src/environments/environment.ts",
-              "with": "apps/frontend/admin/src/environments/environment.prod.ts"
+              "replace": "apps/frontend/site/src/environments/environment.ts",
+              "with": "apps/frontend/site/src/environments/environment.prod.ts"
             }
           ],
           "outputHashing": "all"
@@ -57,10 +57,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "browserTarget": "admin:build:production"
+          "browserTarget": "frontend-site:build:production"
         },
         "development": {
-          "browserTarget": "admin:build:development"
+          "browserTarget": "frontend-site:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -68,23 +68,23 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "browserTarget": "admin:build"
+        "browserTarget": "frontend-site:build"
       }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "options": {
         "lintFilePatterns": [
-          "apps/frontend/admin/**/*.ts",
-          "apps/frontend/admin/**/*.html"
+          "apps/frontend/site/**/*.ts",
+          "apps/frontend/site/**/*.html"
         ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/frontend/admin"],
+      "outputs": ["coverage/apps/frontend/site"],
       "options": {
-        "jestConfig": "apps/frontend/admin/jest.config.ts",
+        "jestConfig": "apps/frontend/site/jest.config.ts",
         "passWithNoTests": true
       }
     }
