--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nrwl/eslint-plugin-nx": "14.5.7",
     "@nrwl/jest": "14.5.7",
     "@nrwl/linter": "14.5.7",
+    "@nrwl/nest": "^14.5.7",
     "@nrwl/workspace": "14.5.7",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
