--- a/angular.json
+++ b/angular.json
@@ -6,6 +6,7 @@
     "admin-e2e": "apps/frontend/admin-e2e",
     "api": "apps/api",
     "frontend-site": "apps/frontend/site",
-    "frontend-site-e2e": "apps/frontend/site-e2e"
+    "frontend-site-e2e": "apps/frontend/site-e2e",
+    "products": "libs/products"
   }
 }
