--- a/angular.json
+++ b/angular.json
@@ -4,7 +4,7 @@
   "projects": {
     "admin": "apps/frontend/admin",
     "admin-e2e": "apps/frontend/admin-e2e",
-    "api": "apps/api",
+    "api": "apps/backend/api",
     "frontend-site": "apps/frontend/site",
     "frontend-site-e2e": "apps/frontend/site-e2e",
     "products": "libs/products"
