--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
     "start": "nx serve",
+    "start:site": "nx serve frontend-site",
+    "start:admin": "nx serve frontend-admin",
     "build": "nx build",
     "test": "nx test"
   },
